EA-3502 Fix combining multiline logs into 1

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -29,21 +29,18 @@
     pos_file /var/log/kubernetes.app.log.pos
     read_from_head true
 
+    # We first do some basic parsing of only time and stream, so we can then try and combine multiline logs (e.g. stacktraces)
     <parse>
         # Plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
         # Matches from top to bottom, so more-specific patterns should always come first
         @type multi_format
-        # Regular application format
+        # Basic application format (use log_tmp for further processing)
         <pattern>
             format regexp
-            expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
+            # Empty lines (with no log_tmp data) are skipped and go to unparsable but this shouldn't be a problem
+            expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log_tmp>.*)$/
         </pattern>
-        # Fallback simple application format (goes into log field)
-        <pattern>
-            format regexp
-            expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
-        </pattern>
-        # Ultimate fallback (write everything in log field)
+        # Fallback (write everything in log field and sent to unparsable index)
         <pattern>
             format regexp
             expression /^(?<log>.*)$/
@@ -56,12 +53,10 @@
 </source>
 
 <label @app>
-    # Include additional kubernetes metadata in log output.
-    # These are added to a "kubernetes" property within the log event
+    # Include additional kubernetes metadata in log output. These are added to a "kubernetes" property within the log event
     <filter kubernetes.app.**>
         @type kubernetes_metadata
-        # Only include pod annotations starting with "fluentd/"
-        # ie. fluentd/include and fluentd/multiline
+        # Only include pod annotations starting with "fluentd/", ie. fluentd/include and fluentd/multiline
         annotation_match ["^fluentd/*"]
         @id filter_kube_metadata
         # update Kubernetes metadata every 5 mins, instead of watching for changes
@@ -69,17 +64,15 @@
         cache_ttl 300
     </filter>
 
-    # Sets three properties on the log event:
-    # fluentd_include: value of kubernetes.annotations.fluentd/include, false otherwise
-    # fluentd_multiline: value of kubernetes.annotations.fluentd/multiline, false otherwise
-    # fluentd_type: app – used to determine the index while writing to ES
+    # Sets two properties on the log event:
+    #   fluentd_include: value of kubernetes.annotations.fluentd/include, false otherwise
+    #   fluentd_type: app – used to determine the index while writing to ES
     <filter kubernetes.app.**>
         @type record_transformer
         @id id_kubernetes_metadata.fluentd.annotations
         enable_ruby true
         <record>
             fluentd_include ${record.dig("kubernetes", "annotations", "fluentd/include") ? record.dig("kubernetes", "annotations", "fluentd/include") : ("false")}
-            fluentd_multiline ${record.dig("kubernetes", "annotations", "fluentd/multiline") ? record.dig("kubernetes", "annotations", "fluentd/multiline") : ("false")}
             fluentd_type app
             europeana_cluster "#{ENV['EANA_K8S_CLUSTER']}"
         </record>
@@ -95,76 +88,92 @@
         </regexp>
     </filter>
 
-    # Re-tag log events for proper routing
+    # Re-tag based on whether things were parsed properly or not
     <match kubernetes.app.**>
         @type rewrite_tag_filter
         @id kubernetes_app_routing
-
-        # Empty stream field means it's unparsed data, so retag as "trash.*"
         <rule>
-            key stream
+            key log
             pattern /^.+$/
-            invert true
-            tag trash.${tag}
+            tag unparsable.${tag}
         </rule>
-        # Re-tag events with fluentd_multiline: false as "plain.*"
         <rule>
-            key fluentd_multiline
-            pattern /^false$/
-            tag plain.${tag}
-        </rule>
-        # Re-tag events with fluentd_multiline: true as "multiline.*"
-        <rule>
-            key fluentd_multiline
-            pattern /^false$/
-            invert true
-            tag multiline.${tag}
+            key log_tmp
+            pattern /^.+$/
+            tag parsed.${tag}
         </rule>
     </match>
 
-    # Send trash items to different index
-    <filter trash.**>
+    # Unparsable items go to a different index
+    <filter unparsable.**>
         @type record_transformer
-        @id id_add_trash_type
+        @id id_add_unparsable_type
         <record>
             fluentd_type unparsable
         </record>
     </filter>
 
-    # trash.* and plain.* events go straight to @output
-    <match trash.**>
+    #  Routing....
+    #   unparsable.* goes straight to @output
+    <match unparsable.**>
         @type relabel
         @label @output
     </match>
-    <match plain.**>
-        @type relabel
-        @label @output
-    </match>
-
-    # relabel "multiline.* events for further processing"
-    <match multiline.**>
+    #   Everything else goes to the multiline concatenation section
+    <match parsed.**>
         @type relabel
         @label @multiline
     </match>
 </label>
 
-# Handle multiline events
+# Combine multiline events like stacktraces
+# Based on blog https://arnoldgalovics.com/java-multiline-logs-fluentd/
 <label @multiline>
-    <filter multiline.**>
+    <filter parsed.**>
+        @log_level trace
         @type concat
         @id id_concat.multiline
-        stream_identity_key docker.container_id
-        key log
-        timeout_label @output
-        # Application logs always start with a timestamp
-        # Regex matches "2023-02-23T13:20:52.284+01:00" and "13:21:45.159"
-        multiline_start_regexp /[^T]?\d{2}:\d{2}:\d{2}\.\d+[^ ]*/
-        flush_interval 5s
         use_first_timestamp true
+        stream_identity_key docker.container_id
+        key log_tmp   # field that should be merged
+        # The "log_tmp" field should always start with a timestamp. All lines after the first in a stacktrace do not have a timestamp, so they are combined
+        # Regex matches "2023-02-23T13:20:52.284+01:00" and "13:21:45.159"
+        multiline_start_regexp /[^T]?\d{2}:\d{2}:\d{2}\.\d+[^ ]/
+        flush_interval 3s
+        # If no new lines come in after 3 sec there's a timeout and the timeout label instructs where to go next when that happens
+        timeout_label @additional_parsing
     </filter>
 
-    # relabel and emit to @output
-    <match multiline.**>
+    <match parsed.**>
+        @type relabel
+        @label @additional_parsing
+    </match>
+</label>
+
+# Separate the log_tmp field into different parts
+<label @additional_parsing>
+    <filter **>
+        @type parser
+        key_name log_tmp
+        reserve_data true       # We want to keep other existing fields
+        remove_key_name_field   # except for the log_tmp field
+        reserve_time true       # Also keep the original parsed timestamp
+        <parse>
+            @type multi_format
+            # Regular application format. Note that we'll ignore the leading timestamp in the log_tmp field
+            <pattern>
+                format regexp
+                expression /.+ (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>(.|\s)*)$/
+            </pattern>
+            # Fallback (write everything in log field as is)
+            <pattern>
+                format regexp
+                expression /^(?<log>.*)/
+            </pattern>
+        </parse>
+    </filter>
+
+    <match **>
         @type relabel
         @label @output
     </match>
