--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -44,12 +44,12 @@
     # Re-tag events that do not have a proper format
     <match kubernetes.ingress.**>
         @type rewrite_tag_filter
-        @id ingress_retag_trash
+        @id ingress_retag_unparsable
         @log_level trace
         <rule>
             key log
             pattern /^.+$/
-            tag trash.${tag}
+            tag unparsable.${tag}
         </rule>
         # Not sure why, but if we don't retag the items that are parsed properly, then we lose them.
         <rule>
@@ -60,10 +60,10 @@
         </rule>
     </match>
 
-    # Send trash items to different index
-    <filter trash.**>
+    # Send unparsable items to different index
+    <filter unparsable.**>
         @type record_transformer
-        @id ingress_add_trash_type
+        @id ingress_add_unparsable_type
         <record>
             fluentd_type unparsable
         </record>
