--- a/local_test/local_apps.conf
+++ b/local_test/local_apps.conf
@@ -39,9 +39,10 @@
         # Basic application format
         <pattern>
             format regexp
-            expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
+            # Empty lines (with no log_tmp data) are skipped and go to unparsable but this shouldn't be a problem
+            expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log_tmp>.*)$/
         </pattern>
-        # Fallback: write everything in log field -> goes to unparsable index
+        # Fallback (write everything in log field and sent to unparsable index)
         <pattern>
             format regexp
             expression /^(?<log>.*)$/
@@ -57,7 +58,7 @@
     # Include additional kubernetes metadata in log output. These are added to a "kubernetes" property within the log event
     <filter kubernetes.app.**>
         @type kubernetes_metadata
-        # Only include pod annotations starting with "fluentd/", ie. fluentd/include and fluentd/multiline
+        # Only include pod annotations starting with "fluentd/", ie. fluentd/include
         annotation_match ["^fluentd/*"]
         @id filter_kube_metadata
         # Update Kubernetes metadata every 5 mins, instead of watching for changes
@@ -65,17 +66,15 @@
         cache_ttl 300
     </filter>
 
-    # Sets three properties on the log event:
-    # fluentd_include: value of kubernetes.annotations.fluentd/include, false otherwise
-    # fluentd_multiline: value of kubernetes.annotations.fluentd/multiline, false otherwise
-    # fluentd_type: app – used to determine the index while writing to ES
+    # Sets two properties on the log event:
+    #   fluentd_include: value of kubernetes.annotations.fluentd/include, false otherwise
+    #   fluentd_type: app – used to determine the index while writing to ES
     <filter kubernetes.app.**>
         @type record_transformer
         @id id_kubernetes_metadata.fluentd.annotations
         enable_ruby true
         <record>
             fluentd_include  true ## ${record.dig("kubernetes", "annotations", "fluentd/include") ? record.dig("kubernetes", "annotations", "fluentd/include") : ("false")}
-            fluentd_multiline true  ## ${record.dig("kubernetes", "annotations", "fluentd/multiline") ? record.dig("kubernetes", "annotations", "fluentd/multiline") : ("false")}
             fluentd_type app
             europeana_cluster "#{ENV['EANA_K8S_CLUSTER']}"
         </record>
@@ -91,34 +90,23 @@
         </regexp>
     </filter>
 
-    # Re-tag log event for routing
+    # Re-tag based on whether its was parsed properly or not
     <match kubernetes.app.**>
         @type rewrite_tag_filter
         @id kubernetes_app_routing
-
-        # Empty stream field means it's unparsed data, so retag as "unparsable.*"
         <rule>
-            key stream
+            key log
             pattern /^.+$/
-            invert true
             tag unparsable.${tag}
         </rule>
-        # Re-tag events with fluentd_multiline: false as "plain.*"
         <rule>
-            key fluentd_multiline
-            pattern /^false$/
-            tag plain.${tag}
-        </rule>
-        # Re-tag events with fluentd_multiline: true as "multiline.*"
-        <rule>
-            key fluentd_multiline
-            pattern /^false$/
-            invert true
-            tag multiline.${tag}
+            key log_tmp
+            pattern /^.+$/
+            tag parsed.${tag}
         </rule>
     </match>
 
-    # Send unparsable items to different index
+    # Unparsable items go to a different index
     <filter unparsable.**>
         @type record_transformer
         @id id_add_unparsable_type
@@ -127,69 +115,65 @@
         </record>
     </filter>
 
-    # Futher routing....
+    #  Routing....
     #   unparsable.* goes straight to @output
     <match unparsable.**>
         @type relabel
         @label @output
     </match>
-    #   plain.* events are processed further
-    <match plain.**>
-        @type relabel
-        @label @app_more_parsing
-    </match>
-    #   multiline.* events are first combined and then processed further
-    <match multiline.**>
+    #   Everything else goes to the multiline concatenation part
+    <match parsed.**>
         @type relabel
         @label @multiline
     </match>
 </label>
 
-# Combine multiline events
+# Combine multiline events like stacktraces
+# Based on blog https://arnoldgalovics.com/java-multiline-logs-fluentd/
 <label @multiline>
-    <filter multiline.**>
+    <filter parsed.**>
         @log_level trace
         @type concat
         @id id_concat.multiline
+        use_first_timestamp true
         stream_identity_key docker.container_id
-        key log   # field that should be merged
-        # The "log" part that we parsed always starts with a timestamp, at least at the start of a stacktrace
-        # All subsequent lines in a stacktrace, do not have a timestamp, so they are combined
+        key log_tmp   # field that should be merged
+        # The "log_tmp" field should always start with a timestamp. All lines after the first in a stacktrace do not have a timestamp, so they are combined
         # Regex matches "2023-02-23T13:20:52.284+01:00" and "13:21:45.159"
         multiline_start_regexp /[^T]?\d{2}:\d{2}:\d{2}\.\d+[^ ]/
-        separator " "
         flush_interval 3s
-        # timeout label is needed to continue normal operations after flush timeout (see also https://arnoldgalovics.com/java-multiline-logs-fluentd/)
-        timeout_label @output
-        use_first_timestamp true
+        # If no new lines come in after 3 sec there's a timeout and the timeout label instructs where to go next when that happens
+        timeout_label @additional_parsing
     </filter>
 
-    <match multiline.**>
+    <match parsed.**>
         @type relabel
-        @label @app_more_parsing
+        @label @additional_parsing
     </match>
 </label>
 
-<label @app_more_parsing>
-#     <filter **>
-#         @log_level trace
-#         @type parser
-#         key_name log
-#         emit_invalid_record_to_error true
-#         <parse>
-#             @type multi_format
-#             # Regular application format
-#             <pattern>
-#                 format regexp
-#                 expression /(?<time>.+) (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)$/
-#             </pattern>
-#             # Fallback (write everything in log field)
-#             <pattern>
-#                 format regexp
-#                 expression /^(?<log>.*)/
-#             </pattern>
-#         </parse>
-#     </filter>
+# Separate the log_tmp field into different parts
+<label @additional_parsing>
+    <filter **>
+        @type parser
+        key_name log_tmp
+        reserve_data true       # We want to keep other existing fields
+        remove_key_name_field   # except for the log_tmp field
+        reserve_time true       # Also keep the original parsed timestamp
+        <parse>
+            @type multi_format
+            # Regular application format. Note that we'll ignore the leading timestamp in the log_tmp field
+            <pattern>
+                format regexp
+                expression /.+ (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>(.|\s)*)$/
+            </pattern>
+            # Fallback (write everything in log field as is)
+            <pattern>
+                format regexp
+                expression /^(?<log>.*)/
+            </pattern>
+        </parse>
+    </filter>
 
     <match **>
         @type relabel
