--- a/local_test/local_ingress.conf
+++ b/local_test/local_ingress.conf
@@ -4,9 +4,9 @@
     tag kubernetes.ingress.*
     @label @ingress
 
-    ## path /var/log/containers/*kube-system_nginx-ingress*.log
+#     path /var/log/containers/*kube-system_nginx-ingress*.log
+#     pos_file /var/log/ingress.log.pos
     path ./dummy_logs/ingres*.txt
-    ## pos_file /var/log/ingress.log.pos
     pos_file ./result/kubernetes.ingress.log.pos
     read_from_head true
 
@@ -46,12 +46,12 @@
     # Re-tag events that do not have proper format
     <match kubernetes.ingress.**>
         @type rewrite_tag_filter
-        @id ingress_retag_trash
+        @id ingress_retag_unparsable
         @log_level trace
         <rule>
             key log
             pattern /^.+$/
-            tag trash.${tag}
+            tag unparsable.${tag}
         </rule>
         # Not sure why, but if we don't retag the items that are parsed properly, then we lose them.
         <rule>
@@ -62,10 +62,10 @@
         </rule>
     </match>
 
-    # Send trash items to different index
-    <filter trash.**>
+    # Send unparsable items to different index
+    <filter unparsable.**>
         @type record_transformer
-        @id ingress_add_trash_type
+        @id ingress_add_unparsable_type
         <record>
             fluentd_type unparsable
         </record>
