EA-3502 Fix combining multiline logs into 1

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -16,12 +16,12 @@
                   "/var/log/containers/*_external-secrets_*.log",
 
                   "/var/log/containers/*_dev_*",                          # all pods in dev namespace (from SX team)
-                  "/var/log/containers/portal-js*",                       # all other SX team deployments
+                  "/var/log/containers/portal-js*",                      # all other SX team deployments
                   "/var/log/containers/contribute-*",
                   "/var/log/containers/contentful-proxy-*",
                   "/var/log/containers/media-proxy-js-*",
                   "/var/log/containers/styleguide-*",
-                  "/var/log/www-*",
+                  "/var/log/containers/www-*",
                   "/var/log/containers/cm-acme-http-solver-*",
 
                   "/var/log/containers/bad-deployment-*",                 # pod eviction stuff created by infra team
