--- a/local_test/local_ingress.conf
+++ b/local_test/local_ingress.conf
@@ -33,6 +33,17 @@
 </source>
 
 <label @ingress>
+
+    # Filter out logs that have a host name containing the provided regex pattern
+    <filter kubernetes.ingress.**>
+        @type grep
+        @id id_grep.fluentd_ingress
+        <exclude>
+            key host
+            pattern "#{ENV['EXCLUDE_HOST_REGEX']}"
+        </exclude>
+    </filter>
+
     # Add default output settings for all ingress logs
     <filter kubernetes.ingress.**>
         @type record_transformer
