--- a/local_test/local_output.conf
+++ b/local_test/local_output.conf
@@ -12,9 +12,9 @@
 #     include_timestamp true
 
         @type file
-        path "./result/fluentd-${fluentd_type}.log"
+        path "./result/fluentd-${fluentd_type}-${europeana_cluster}.log"
         append true
-        <buffer time, fluentd_type>
+        <buffer time, fluentd_type, europeana_cluster>
             timekey 1m 
             timekey_wait 0
             timekey_use_utc true
