--- a/fluentd/kustomize/base/fluentd.properties.yaml.template
+++ b/fluentd/kustomize/base/fluentd.properties.yaml.template
@@ -31,6 +31,8 @@ spec:
             value: "${ELASTIC_SEARCH_INDEX}"
           - name:  EANA_K8S_CLUSTER
             value: "${EANA_K8S_CLUSTER}"
+          - name:  EXCLUDE_HOST_REGEX
+            value: "${EXCLUDE_HOST_REGEX}"
           - name:  FLUENTD_SYSTEMD_CONF
             value: 'disable'
           - name: K8S_NODE_NAME
