EA-3767 Add JWT plugin to parse token information

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -80,17 +80,41 @@
         </record>
     </filter>
 
+    <filter parsed.**>
+        @type jwt
+        token_key authorization
+        skip_basic_token true
+        <record>
+            client_key   payload.azp
+            client_id    payload.client_public_id
+            user_id      payload.sub
+            session_id   payload.sid
+        </record>
+    </filter>
+
     # Add additional fields to parsed logs
     <filter parsed.**>
         @type record_transformer
         @id ingress_record_processing
-        # TODO Enable ruby is not ideal for performance, see also https://docs.fluentd.org/filter/record_transformer#enable_ruby
         enable_ruby
         <record>
-            # Extract wskey value if it exists
-            wskey ${record["args"][/.*wskey=([^&]*)/,1]}
             # Either use external_client_ip if it exists already, or copy over client-ipv4 value
-            external_client_ip ${if record["external_client_ip"].empty? then record["client-ipv4"]; else record["external_client_ip"] end;}
+            external_client_ip ${if record["external_client_ip"].empty? then record["client-ipv4"] else record["external_client_ip"] end}
+            # Extract wskey value if it exists (legacy field)
+            wskey ${record["args"][/.*wskey=([^&]*)/,1]}
+            # If we got a client_key from jwt then keep that, else copy over from x_api_key, or else from wskey parameter
+            client_key ${if (record["client_key"].nil? || record["client_key"].empty?) then record["x_api_key"] else record["client_key"] end}
+        </record>
+        # always remove the authorization and x_api_key fields to reduce data sent to elastic
+        remove_keys authorization,x_api_key
+    </filter>
+    # TODO for some reason doing 2 client_key modifications in 1 filter doesn't work properly
+    <filter parsed.**>
+        @type record_transformer
+        @id ingress_record_processing2
+        enable_ruby
+        <record>
+             client_key ${if (record["client_key"].nil? || record["client_key"].empty?) then record["wskey"] else record["client_key"] end}
         </record>
     </filter>
 
