--- a/local_test/local_ingress.conf
+++ b/local_test/local_ingress.conf
@@ -17,7 +17,7 @@
         # The trailing ,?.* is so we can add new fields later without immediately breaking parsing
         <pattern>
             format regexp
-            expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S*)",\s?"host": "(?<host>\S*)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]*)",\s?"request_uri": "(?<request_uri>.*?)",\s?"args": "(?<args>\S*)",\s?"request_id": "(?<request_id>[0-9a-fA-F]*)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S*)",\s?"upstream_status": (?<upstream_status>(-1|0|\d{3})),\s?"request_time": (?<request_time>-?[\d\.]*),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]*),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]*),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]*),\s?"user_agent": "(?<http_user_agent>.*?)",\s?"http_referrer": "(?<referrer>\S*)",\s?"body_bytes_sent": (?<body_bytes_sent>[\d\.]*),\s?"cf_connecting_ip": "(?<external_client_ip>\S*)",?.*}/
+            expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S*)",\s?"host": "(?<host>\S*)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]*)",\s?"request_uri": "(?<request_uri>.*?)",\s?"args": "(?<args>\S*)",\s?"request_id": "(?<request_id>[0-9a-fA-F]*)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S*)",\s?"upstream_status": (?<upstream_status>(-1|0|\d{3})),\s?"request_time": (?<request_time>-?[\d\.]*),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]*),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]*),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]*),\s?"user_agent": "(?<http_user_agent>.*?)",\s?"http_referrer": "(?<referrer>\S*)",\s?"body_bytes_sent": (?<body_bytes_sent>[\d\.]*),\s?"cf_connecting_ip": "(?<external_client_ip>\S*)",\s?"x_api_key": "(?<x_api_key>\S*)",\s?"authorization": "(?<authorization>.*?)",?.*}/
         </pattern>
         # Fallback (write everything in log field)
         <pattern>
@@ -35,14 +35,15 @@
 <label @ingress>
 
     # Filter out logs that have a host name containing the provided regex pattern
-    <filter kubernetes.ingress.**>
-        @type grep
-        @id id_grep.fluentd_ingress
-        <exclude>
-            key host
-            pattern "#{ENV['EXCLUDE_HOST_REGEX']}"
-        </exclude>
-    </filter>
+    # WARNING! If the EXCLUDE_HOST_REGEX variable isn't set then everything will be filtered by the grep plugin!!
+#     <filter kubernetes.ingress.**>
+#         @type grep
+#         @id id_grep.fluentd_ingress
+#         <exclude>
+#             key host
+#             pattern "#{ENV['EXCLUDE_HOST_REGEX']}"
+#         </exclude>
+#     </filter>
 
     # Add default output settings for all ingress logs
     <filter kubernetes.ingress.**>
@@ -82,17 +83,41 @@
         </record>
     </filter>
 
+    <filter parsed.**>
+        @type jwt
+        token_key authorization
+        skip_basic_token true
+        <record>
+            client_key   payload.azp
+            client_id    payload.client_public_id
+            user_id      payload.sub
+            session_id   payload.sid
+        </record>
+    </filter>
+
     # Add additional fields to parsed logs
     <filter parsed.**>
         @type record_transformer
         @id ingress_record_processing
-        # TODO Enable ruby is not ideal for performance, see also https://docs.fluentd.org/filter/record_transformer#enable_ruby
         enable_ruby
         <record>
-            # Extract wskey value if it exists
-            wskey ${record["args"][/.*wskey=([^&]*)/,1]}
             # Either use external_client_ip if it exists already, or copy over client-ipv4 value
-            external_client_ip ${if record["external_client_ip"].empty? then record["client-ipv4"]; else record["external_client_ip"] end;}
+            external_client_ip ${if record["external_client_ip"].empty? then record["client-ipv4"] else record["external_client_ip"] end}
+            # Extract wskey value if it exists (legacy field)
+            wskey ${record["args"][/.*wskey=([^&]*)/,1]}
+            # If we got a client_key from jwt then keep that, else copy over from x_api_key, or else from wskey parameter
+            client_key ${if (record["client_key"].nil? || record["client_key"].empty?) then record["x_api_key"] else record["client_key"] end}
+        </record>
+        # always remove the authorization and x_api_key fields to reduce data sent to elastic
+        remove_keys authorization,x_api_key
+    </filter>
+    # TODO for some reason doing 2 client_key modifications in 1 filter doesn't work properly
+    <filter parsed.**>
+        @type record_transformer
+        @id ingress_record_processing2
+        enable_ruby
+        <record>
+             client_key ${if (record["client_key"].nil? || record["client_key"].empty?) then record["wskey"] else record["client_key"] end}
         </record>
     </filter>
 
