EA-3767 fix regex to include x-api-key and authorization headers

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -15,7 +15,7 @@
         # The trailing ,?.* is so we can add new fields later without immediately breaking parsing
         <pattern>
             format regexp
-            expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S*)",\s?"host": "(?<host>\S*)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]*)",\s?"request_uri": "(?<request_uri>.*?)",\s?"args": "(?<args>\S*)",\s?"request_id": "(?<request_id>[0-9a-fA-F]*)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S*)",\s?"upstream_status": (?<upstream_status>(-1|0|\d{3})),\s?"request_time": (?<request_time>-?[\d\.]*),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]*),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]*),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]*),\s?"user_agent": "(?<http_user_agent>.*?)",\s?"http_referrer": "(?<referrer>\S*)",\s?"body_bytes_sent": (?<body_bytes_sent>[\d\.]*),\s?"cf_connecting_ip": "(?<external_client_ip>\S*)",?.*}/
+            expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S*)",\s?"host": "(?<host>\S*)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]*)",\s?"request_uri": "(?<request_uri>.*?)",\s?"args": "(?<args>\S*)",\s?"request_id": "(?<request_id>[0-9a-fA-F]*)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S*)",\s?"upstream_status": (?<upstream_status>(-1|0|\d{3})),\s?"request_time": (?<request_time>-?[\d\.]*),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]*),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]*),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]*),\s?"user_agent": "(?<http_user_agent>.*?)",\s?"http_referrer": "(?<referrer>\S*)",\s?"body_bytes_sent": (?<body_bytes_sent>[\d\.]*),\s?"cf_connecting_ip": "(?<external_client_ip>\S*)",\s?"x_api_key": "(?<x_api_key>\S*)",\s?"authorization": "(?<authorization>.*?)",?.*}/
         </pattern>
         # Fallback (write everything in log field)
         <pattern>
@@ -108,7 +108,7 @@
         # always remove the authorization and x_api_key fields to reduce data sent to elastic
         remove_keys authorization,x_api_key
     </filter>
-    # TODO for some reason doing 2 client_key modifications in 1 filter doesn't work properly
+    # Doing 2 client_key modifications in 1 filter doesn't work, so to keep the logic simple we use a second record_transformer
     <filter parsed.**>
         @type record_transformer
         @id ingress_record_processing2
