--- a/local_test/local_ingress.conf
+++ b/local_test/local_ingress.conf
@@ -111,7 +111,7 @@
         # always remove the authorization and x_api_key fields to reduce data sent to elastic
         remove_keys authorization,x_api_key
     </filter>
-    # TODO for some reason doing 2 client_key modifications in 1 filter doesn't work properly
+    # Doing 2 client_key modifications in 1 filter doesn't work, so to keep the logic simple we use a second record_transformer
     <filter parsed.**>
         @type record_transformer
         @id ingress_record_processing2
